--- a/MicroServiceOne/pom.xml
+++ b/MicroServiceOne/pom.xml
@@ -33,6 +33,18 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.16.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.root</groupId>
             <artifactId>CommanService</artifactId>
 <!-- Notice that we don’t need version here as that has been defined in the parent pom. -->
