--- a/MicroServiceOne/src/main/resources/application.properties
+++ b/MicroServiceOne/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=micro-service-one
-server.servlet.context-path=/api
+#server.servlet.context-path=/api
 spring.datasource.url=jdbc:mysql://localhost:3306/drizzle?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Password123#@!
