--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,17 @@
 <!--            <scope>provided</scope>-->
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.16.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.17.0</version>
+        </dependency>
 
         <!-- Example of excluding both httpclient and httpcore from spring-boot-starter-web -->
 <!--        <dependency>-->
